--- a/index.html
+++ b/index.html
@@ -4,23 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Super-Duper Code Quiz</title>
 
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!--My CSS-->
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href=".\assets\css\style.css">
 </head>
-<body>
-    <header>
-
+<body class="container bg-secondary">
+    <header class="row border border-primary rounded-top">
+        <div class="col-2">
+            <button id="view-score" type="button" class="btn btn-secondary d-inline-block mt-1">View High Score</button>
+        </div>
+        <div class="col-8">
+            <h1>Code quiz</h1>
+        </div>
+        <div class="col-2">
+            <p class="d-flex time">Time Left:</p>
+        </div>
     </header>
-    <main>
+    <main class="row border border-primary rounded-0">
 
     </main>
-    <footer>
+    <footer class="row border border-primary rounded-bottom">
 
     </footer>
+
+    <!--Bootstrap scripts-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
 </html>
