--- a/index.html
+++ b/index.html
@@ -12,22 +12,68 @@
     <!--My CSS-->
     <link rel="stylesheet" href=".\assets\css\style.css">
 </head>
-<body class="container bg-secondary">
-    <header class="row border border-primary rounded-top">
-        <div class="col-2">
-            <button id="view-score" type="button" class="btn btn-secondary d-inline-block mt-1">View High Score</button>
-        </div>
-        <div class="col-8">
-            <h1>Code quiz</h1>
-        </div>
-        <div class="col-2">
-            <p class="d-flex time">Time Left:</p>
+<body class="bg-secondary">
+    <header class="container">
+        <div class="row">
+            <div class="col-2">
+                <button id="view-score" type="button" class="btn btn-secondary d-inline-block mt-1">View High Score</button>
+            </div>
+            <div class="col-8">
+                <h1>Code quiz</h1>
+            </div>
+            <div class="col-2">
+                <p class="d-flex time">Time Left:</p>
+            </div>
         </div>
     </header>
-    <main class="row border border-primary rounded-0">
-
+    <main>
+        <div class="container">
+            <section>
+                <div class="row">
+                    <div class="col-3"></div>
+                    <div class="col-6">
+                        <p class="d-flex justify-content-center text-center">Answer as many questions as possible.<br /> <br />GIVE IT YOUR BEST TRY because your score will be enshrined in the HIGH SCORE for all of eternity!! </p>
+                        <button id="start" type="button" class="btn btn-success mx-auto d-block">START</button> 
+                    </div>
+                </div>
+            </section> 
+            
+            <!--Question and Answers-->
+            <section id="questions">
+                <div class="row">
+                    <div class="col-3"></div>
+                    <div class="col-6">
+                        <p>Question Placeholder</p>
+                        <ul class="px-5 py-5 nobullets">
+                            <li class="mb-3">
+                                <button id="answer1" value="0" type="button" class="btn btn-success ansBtn">Answer1</button>
+                            </li>
+                            <li class="mb-3">
+                                <button id="answer2" value="1" type="button" class="btn btn-success ansBtn">Answer2</button>
+                            </li>
+                            <li class="mb-3">
+                                <button id="answer3" value="2" type="button" class="btn btn-success ansBtn">Answer3</button>
+                            </li>
+                            <li class="mb-3">
+                                <button id="answer4" value="3" type="button" class="btn btn-success ansBtn">Answer4</button>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>  
+            <section id="end">
+                <div class="row">
+                    <div class="col-3"></div>
+                    <div class="col-6">
+                        <p>Complete!</p>
+                        <p>Your final score is: <span id="score" class="pl-1">0</span></p>
+                        <p>Enter your initials<span class="ml-1"><input placeholder="initials" id="initials" /></span></p>
+                    </div>
+                </div>
+            </section>        
+        </div>
     </main>
-    <footer class="row border border-primary rounded-bottom">
+    <footer class="">
 
     </footer>
 
