--- a/index.html
+++ b/index.html
@@ -12,27 +12,28 @@
     <!--My CSS-->
     <link rel="stylesheet" href=".\assets\css\style.css">
 </head>
+
 <body class="bg-secondary">
     <header class="container">
         <div class="row">
             <div class="col-2">
-                <button id="view-score" type="button" class="btn btn-secondary d-inline-block mt-1">View High Score</button>
+                <button id="view-scores" type="button" class="btn btn-secondary d-inline-block mt-1">View High Score</button>
             </div>
             <div class="col-8">
                 <h1>Code quiz</h1>
             </div>
             <div class="col-2">
-                <p class="d-flex time">Time Left:</p>
+                <p class="d-flex" id="time">Time Left: 60s</p>
             </div>
         </div>
     </header>
     <main>
         <div class="container">
-            <section>
+            <section id="intro">
                 <div class="row">
                     <div class="col-3"></div>
-                    <div class="col-6">
-                        <p class="d-flex justify-content-center text-center">Answer as many questions as possible.<br /> <br />GIVE IT YOUR BEST TRY because your score will be enshrined in the HIGH SCORE for all of eternity!! </p>
+                    <div class="col-6 justify-content-center">
+                        <p class="d-flex justify-content-center text-center">How well do you REALLY know Javascript?!?!<br /> <br />GIVE IT YOUR BEST TRY because your score will be enshrined in the HIGH SCORE (on your computer) for all eternity!!<br /><br />P.S.: Be careful...you'll be punished for every wrong answer! </p>
                         <button id="start" type="button" class="btn btn-success mx-auto d-block">START</button> 
                     </div>
                 </div>
@@ -43,7 +44,7 @@
                 <div class="row">
                     <div class="col-3"></div>
                     <div class="col-6">
-                        <p>Question Placeholder</p>
+                        <p id="question">Question Placeholder</p>
                         <ul class="px-5 py-5 nobullets">
                             <li class="mb-3">
                                 <button id="answer1" value="0" type="button" class="btn btn-success ansBtn">Answer1</button>
@@ -58,9 +59,14 @@
                                 <button id="answer4" value="3" type="button" class="btn btn-success ansBtn">Answer4</button>
                             </li>
                         </ul>
+                        <div id="yesno">
+                            <hr>
+                            <!-- Correct or Wrong will be added via JS -->
+                        </div>
                     </div>
                 </div>
-            </section>  
+            </section> 
+
             <section id="end">
                 <div class="row">
                     <div class="col-3"></div>
@@ -68,14 +74,33 @@
                         <p>Complete!</p>
                         <p>Your final score is: <span id="score" class="pl-1">0</span></p>
                         <p>Enter your initials<span class="ml-1"><input placeholder="initials" id="initials" /></span></p>
+                        <button id="submit-score" class="btn  btn-success mx-1 my-1 d-inline-block">Submit</button>
                     </div>
                 </div>
-            </section>        
+            </section>
+            
+            <!--High Score-->
+            <section id="highscores">
+                <div class="row">
+                    <div class="col-4"></div>
+                    <div class="col-4">
+                            <h2>High Scores</h2>
+                            <ol id="score-list">
+                                <!-- <li></li> -->
+                            </ol>
+                            <button id="goback" class="btn btn-success d-inline-block mx-1 my-1">Go back</button>
+                            <button id="clear-scores" class="btn btn-success mx-1 my-1 d-inline-block">Clear scores</button>
+                    </div>
+                </div>
+            </section>                    
         </div>
     </main>
     <footer class="">
 
     </footer>
+
+    <!--My Script-->
+    <script src="./assets/js/script.js"></script>
 
     <!--Bootstrap scripts-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
